test/simple/correct/Reexport2.hs
module Reexport2( {- x,-} y) where

import Reexport3

{-x :: Int
x = y
-}