test/simple/typeerrors/Examples/LineBug.hs
module LineBug where

test :: Int
test = ("\n", '\n')
